fix spacing around action buttons

--- a/app/styles/movie.scss
+++ b/app/styles/movie.scss
@@ -148,29 +148,26 @@ ol.movies {
   }
   
   .actions {
-    font-size: .9em;
-    line-height: 1.7;
-    margin-top: 1.6em;
+    font-size:11px;
+    margin-top:1.6em;
     
-    p { margin:0; padding:5px 0; }
+    p { padding:2px 0 3px; }
     
     .button_to {
-      display: inline-block;
+      display:inline-block;
+      
       input[type=submit] {
         cursor: pointer;
-        font-size: 1em;
         display:inline-block; color:#333;
-        padding: 0 4px;
-        margin-bottom: 4px;
-        line-height: 1.7;
         background-color:#e5e5e5; @include linear-gradient(color-stops(rgba(white, .6), rgba(white, 0)));
         border:1px solid #ddd; @include border-radius;
 
+        height:18px; line-height:16px;
+        margin:0 0 5px; padding:0 4px 2px;
+        
         &:hover { color:#fdfdfd; border-color:$body-color; background:$body-color }
         
-        &.to-watch, &.watched {
-          width: 100px;
-        }
+        &.to-watch, &.watched { width:100px; }
         
         &[disabled] { background-color: #ccc; color: #666; }
       }
@@ -245,11 +242,7 @@ ol.movies {
       width: $poster-medium-width;
     }
   }
-  .actions {
-    margin-top:1.3em;
-    
-    p { padding-top:4px; }
-  }
+  .actions { margin-top:1.3em; }
 
   h1 { font-size:2.4em; line-height:1.25em; margin-bottom:.4em; }
 
